Fixed text alignment of the paragraph examples in the site plan.

--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -110,6 +110,10 @@ p {
   color: var(--accent3-color);
 }
 
+p.normal, p.colored {
+  text-align: left;
+}
+
 p.colored {
   background-color: var(--accent1-color);
   color: var(--accent2-color);
